# RecruitBD-AI

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: nightly.yaml
backend/: .dockerignore  .gitignore  Dockerfile  config.py  main.py  pyproject.toml  railway.toml
backend/api/: api.py  app.py  routes.py
backend/core/: config.py
backend/cv/: cv_parse.py
backend/jobs/: build_index.py  jobs.py
backend/matcher/: build_index.py  cv_matcher.py
backend/matcher/csv_encoder/: build_index.py
backend/services/: __init__.py
backend/services/cv/: cv_parse.py
backend/services/jobs/: jobs.py
backend/services/matcher/: build_index.py  constants.py  cv_matcher.py
backend/tests/: test_api.py  test_matcher.py
backend/tests/promptfoo/: package.json  pnpm-workspace.yaml  prompt.txt  promptfooconfig.yaml  test_cvs.yaml  validate_schema.js
cv/: cv_parse.py
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/hooks/: step-animation.ts
frontend/src/components/icons/: taka.tsx
frontend/src/components/ui/: backend-status.tsx  step-bar.tsx  theme-toggle.tsx
frontend/src/components/views/: ProfileView.tsx  ProgressView.tsx  ResultsView.tsx  UploadView.tsx
frontend/src/lib/: api.ts  demo.ts  reducer.ts  types.ts
jobs/: jobs.py
