[project]
name = "recruitbd-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "bs4>=0.0.2",
    "ollama>=0.6.1",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 120
