[project]
name = "recruitbd-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "bs4>=0.0.2",
    "fastapi>=0.115.0",
    "google-genai>=1.74.0",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.12",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.32.0",
]

[tool.ruff]
line-length = 120
