[project]
name = "recruitbd-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "apscheduler>=3.11.2",
    "bs4>=0.0.2",
    "fastapi>=0.115.0",
    "google-genai>=1.74.0",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "pdfplumber>=0.11.9",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.12",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.11.0"]
cuda = ["torch>=2.11.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cuda" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 120

[tool.pytest]
pythonpath = ["."]
